--- a/locales/zh_CN/LC_MESSAGES/pages/donations.po
+++ b/locales/zh_CN/LC_MESSAGES/pages/donations.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Nuitka the Python Compiler \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-02-13 11:50+0800\n"
+"POT-Creation-Date: 2022-02-16 01:36+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -18,11 +18,15 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
 
-#: ../../intl/blog.rst:3
-msgid "Nuitka Blog"
-msgstr "Nuitka 博客"
+#: ../../doc/pages/donations.rst:3
+msgid "Donations"
+msgstr ""
 
-#: ../../intl/blog.rst:5
-msgid "For the English blog, see: :nuitka:`blog`."
-msgstr "有关英文博客，请参阅：:nuitka:`blog`。"
+#: ../../doc/pages/donations.rst:5
+msgid ""
+"Nuitka is an effort, mainly driven in my spare time. For travels to "
+"Python conferences, web site costs, and generally to get rich, I am "
+"accepting donations via PayPal. The money received will be used to "
+"sponsor Nuitka development."
+msgstr ""
 
