--- a/locales/de_DE/LC_MESSAGES/commercial.po
+++ b/locales/de_DE/LC_MESSAGES/commercial.po
@@ -2,7 +2,7 @@
 # Copyright (C) 2022, Kay Hayen and Nuitka Contributors
 # This file is distributed under the same license as the Nuitka the Python
 # Compiler package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2022.
+# Fire-Cube <ben7@gmx.ch>, 2022.
 #
 #, fuzzy
 msgid ""
