--- a/locales/de_DE/LC_MESSAGES/index.po
+++ b/locales/de_DE/LC_MESSAGES/index.po
@@ -35,8 +35,8 @@ msgid ""
 "looks, more information, etc. all is appreciated and necessary."
 msgstr ""
 "Bitte helfen Sie mit und verbessern Sie es in jeder Hinsicht, Tippfehler,"
-" coolere Technik, besseres Aussehen, mehr Informationen, usw."
-" alles ist willkommen und notwendig."
+" coolere Technik, besseres Aussehen, mehr Informationen, usw. alles ist "
+"willkommen und notwendig."
 
 #: ../../README.rst:15
 msgid "Right now, this is very much possible to improve. Your turn!"
@@ -53,10 +53,10 @@ msgid ""
 "this has only be done on Linux, but it ought to also work on Windows, you"
 " can make that work as part of your contribution."
 msgstr ""
-"Damit wird die Nuitka-Website aufgebaut. Erweiterungen aller Art sind willkommen."
-" Du brauchst Python 3.9 und ``pipenv``, um es zu bauen, und bis jetzt wurde es nur"
-" unter Linux gemacht, aber es sollte auch unter Windows funktionieren, du kannst"
-" das als Teil deines Beitrags machen."
+"Damit wird die Nuitka-Website aufgebaut. Erweiterungen aller Art sind "
+"willkommen. Du brauchst Python 3.9 und ``pipenv``, um es zu bauen, und "
+"bis jetzt wurde es nur unter Linux gemacht, aber es sollte auch unter "
+"Windows funktionieren, du kannst das als Teil deines Beitrags machen."
 
 #: ../../README.rst:57
 msgid "Usage of Sphinx"
@@ -69,10 +69,11 @@ msgid ""
 "into pages, with otherwise using Sphinx to render it. Reference the "
 "Sphinx documentation and esp. the one for Read the Docs theme and ABlog."
 msgstr ""
-"Die Seite ist also im Grunde eine Automatisierung des Imports einiger Dateien"
-" aus dem Nuitka git repository, die z.B. die ``Changelog.rst`` in Seiten aufteilt"
-" und ansonsten Sphinx zum Rendern verwendet. Siehe die Sphinx-Dokumentation,"
-" insbesondere die für das Thema Read the Docs und ABlog."
+"Die Seite ist also im Grunde eine Automatisierung des Imports einiger "
+"Dateien aus dem Nuitka git repository, die z.B. die ``Changelog.rst`` in "
+"Seiten aufteilt und ansonsten Sphinx zum Rendern verwendet. Siehe die "
+"Sphinx-Dokumentation, insbesondere die für das Thema Read the Docs und "
+"ABlog."
 
 #: ../../README.rst:66
 msgid "Translation"
@@ -85,10 +86,11 @@ msgid ""
 " ``translation`` branch is used, but the plan is for it to be merged, and"
 " to provide the infrastructure in the ``main`` branch."
 msgstr ""
-"Übersetzungen der Nuitka-Website sind sehr willkommen."
-" Wir haben ein Team für diejenigen, die daran arbeiten wollen,"
-" mit Push-Rechten für das Repository. Im Moment wird ein ``translation`` Zweig"
-" verwendet, aber der Plan ist, diesen zusammenzuführen und die Infrastruktur im ``main`` Zweig bereitzustellen."
+"Übersetzungen der Nuitka-Website sind sehr willkommen. Wir haben ein Team"
+" für diejenigen, die daran arbeiten wollen, mit Push-Rechten für das "
+"Repository. Im Moment wird ein ``translation`` Zweig verwendet, aber der "
+"Plan ist, diesen zusammenzuführen und die Infrastruktur im ``main`` Zweig"
+" bereitzustellen."
 
 #: ../../README.rst:73
 msgid ""
@@ -96,9 +98,9 @@ msgid ""
 "that is not mentioned here, should be asked about if in doubt. Not all "
 "pages make sense to translate."
 msgstr ""
-"Hier ist eine Tabelle mit den zu übersetzenden Dateien und ihren Stilen."
-" Alles, was hier nicht aufgeführt ist, sollte im Zweifelsfall nachgefragt werden."
-" Nicht alle Seiten sind sinnvoll zu übersetzen."
+"Hier ist eine Tabelle mit den zu übersetzenden Dateien und ihren Stilen. "
+"Alles, was hier nicht aufgeführt ist, sollte im Zweifelsfall nachgefragt "
+"werden. Nicht alle Seiten sind sinnvoll zu übersetzen."
 
 #: ../../README.rst:79
 msgid ""
@@ -106,8 +108,9 @@ msgid ""
 " if you agree it makes sense, if it can be better structured. This is "
 "very much needed unfortunately."
 msgstr ""
-"Ich würde mich freuen, wenn Sie vor der Übersetzung auch den Inhalt überprüfen würden,"
-" ob er sinnvoll ist und ob er besser strukturiert werden kann. Das ist leider sehr nötig."
+"Ich würde mich freuen, wenn Sie vor der Übersetzung auch den Inhalt "
+"überprüfen würden, ob er sinnvoll ist und ob er besser strukturiert "
+"werden kann. Das ist leider sehr nötig."
 
 #: ../../README.rst:85
 msgid ""
@@ -116,10 +119,11 @@ msgid ""
 "much better as ``python-compiler`` and the like. A plan will be devised "
 "and put into place, but it will just move and renamed pages."
 msgstr ""
-"Es gibt Pläne, die Unterordner ``pages`` und ``doc`` des Site-Ordners ``doc``"
-" abzuschaffen. Für URLs sind diese einfach schlecht, und wären z.B. viel besser"
-" als ``python-compiler`` und dergleichen. Es wird ein Plan ausgearbeitet"
-" und umgesetzt, aber es werden nur Seiten verschoben und umbenannt."
+"Es gibt Pläne, die Unterordner ``pages`` und ``doc`` des Site-Ordners "
+"``doc`` abzuschaffen. Für URLs sind diese einfach schlecht, und wären "
+"z.B. viel besser als ``python-compiler`` und dergleichen. Es wird ein "
+"Plan ausgearbeitet und umgesetzt, aber es werden nur Seiten verschoben "
+"und umbenannt."
 
 #: ../../README.rst:92
 msgid "Directory ``posts/``"
@@ -134,12 +138,13 @@ msgid ""
 "look in your language, Explorer and shell prompt, even screenshots might "
 "have to be translated. This will come only later though."
 msgstr ""
-"Zur Zeit sollten die Blogeinträge, vor allem die alten, nicht übersetzt werden."
-" Ich glaube, dass neue Inhalte oft in Form von Beiträgen erstellt werden und dann"
-" zur Übersetzung auf Seiten verschoben werden. Ein aktuelles Beispiel sind Seiten"
-" im Stil eines Tutorials mit Screenshots, die je nachdem, wie z.B. der Python-Installer"
-" in Ihrer Sprache, der Explorer und die Shell-Eingabeaufforderung aussehen,"
-" auch übersetzt werden müssen. Das wird aber erst später kommen."
+"Zur Zeit sollten die Blogeinträge, vor allem die alten, nicht übersetzt "
+"werden. Ich glaube, dass neue Inhalte oft in Form von Beiträgen erstellt "
+"werden und dann zur Übersetzung auf Seiten verschoben werden. Ein "
+"aktuelles Beispiel sind Seiten im Stil eines Tutorials mit Screenshots, "
+"die je nachdem, wie z.B. der Python-Installer in Ihrer Sprache, der "
+"Explorer und die Shell-Eingabeaufforderung aussehen, auch übersetzt "
+"werden müssen. Das wird aber erst später kommen."
 
 #: ../../README.rst:103
 msgid "Page ``pages/donations.rst``"
@@ -152,12 +157,26 @@ msgid ""
 "could use."
 msgstr ""
 "Ja, bitte machen Sie weiter. Lassen Sie mich wissen, ob es notwendig ist,"
-" auf Paypal hinzuweisen, oder wenn Paypal in Ihrem Land nicht verfügbar"
-" ist, welche alternativen Möglichkeiten wir nutzen können."
+" auf Paypal hinzuweisen, oder wenn Paypal in Ihrem Land nicht verfügbar "
+"ist, welche alternativen Möglichkeiten wir nutzen können."
 
 #: ../../README.rst:110
 msgid "Page ``pages/overview.rst``"
 msgstr "Seite ``pages/overview.rst``"
+
+#: ../../README.rst:112
+msgid ""
+"Please hold off from this one. It currently is a duplicate of content "
+"that is just the same in ``index.rst`` and not linked, so please ignore "
+"it for now. There is a plan to have a feel good more like a cross road "
+"entry page, that will lead to the kind of page, that the home page is "
+"right now."
+msgstr ""
+"Bitte halten Sie sich von dieser Seite fern. Es handelt sich derzeit um"
+" ein Duplikat von Inhalten, die in ``index.rst`` genau gleich sind und"
+" nicht verlinkt sind, also ignorieren Sie sie bitte vorerst. Es gibt"
+" einen Plan, um ein gutes Gefühl zu haben, mehr wie eine Cross-Eingangsseite,"
+" die zu der Art von Seite führen wird, die die Homepage jetzt ist."
 
 #: ../../README.rst:119
 msgid "Page ``pages/pyside2.rst``"
@@ -172,13 +191,13 @@ msgid ""
 " I think we ought to help the users from real Nuitka to find the "
 "information, and even localized for their needs."
 msgstr ""
-"Sehr wichtige Art von Seite, von der ich mehr haben möchte."
-" Nuitka verlinkt sich selbst mit dieser Seite aus dem Plugin,"
-" und es ist eine Landing Page, um Benutzer über zu erwartende"
-" Probleme zu informieren. Wir wollen dafür eine Art Boilerplate"
-" haben und eine allgemeine Möglichkeit, diese hinzuzufügen."
-" Diese Benutzer-Hinweis-Seiten sind der Ort, an dem wir meiner Meinung"
-" nach den Benutzern von Nuitka helfen sollten, die Informationen zu finden."
+"Sehr wichtige Art von Seite, von der ich mehr haben möchte. Nuitka "
+"verlinkt sich selbst mit dieser Seite aus dem Plugin, und es ist eine "
+"Landing Page, um Benutzer über zu erwartende Probleme zu informieren. Wir"
+" wollen dafür eine Art Boilerplate haben und eine allgemeine Möglichkeit,"
+" diese hinzuzufügen. Diese Benutzer-Hinweis-Seiten sind der Ort, an dem "
+"wir meiner Meinung nach den Benutzern von Nuitka helfen sollten, die "
+"Informationen zu finden."
 
 #: ../../README.rst:129
 msgid "Page ``pages/support.rst``"
@@ -189,8 +208,9 @@ msgid ""
 "This one is not mentioning the Discord server yet, I will add that soon "
 "though. Very important page that should be linked to from many places."
 msgstr ""
-"Hier wird der Discord-Server noch nicht erwähnt, ich werde das aber bald hinzufügen."
-" Sehr wichtige Seite, die von vielen Stellen aus verlinkt werden sollte."
+"Hier wird der Discord-Server noch nicht erwähnt, ich werde das aber bald "
+"hinzufügen. Sehr wichtige Seite, die von vielen Stellen aus verlinkt "
+"werden sollte."
 
 #: ../../README.rst:135
 msgid "Page ``pages/gsoc2019.rst``"
@@ -202,9 +222,10 @@ msgid ""
 " to do with it. But if Nuitka were to do it again, we would translate it "
 "ideally for the next time."
 msgstr ""
-"Das ist eine historische Information, die Übersetzung macht keinen Sinn,"
-" wir wissen nicht, was wir damit anfangen sollen. Aber wenn Nuitka es noch"
-" einmal machen würde, würden wir es für das nächste Mal idealerweise übersetzen."
+"Das ist eine historische Information, die Übersetzung macht keinen Sinn, "
+"wir wissen nicht, was wir damit anfangen sollen. Aber wenn Nuitka es noch"
+" einmal machen würde, würden wir es für das nächste Mal idealerweise "
+"übersetzen."
 
 #: ../../README.rst:142
 msgid "Page ``pages/impressum.rst``"
@@ -216,10 +237,10 @@ msgid ""
 "their information here. I cannot take responsibility for the content of "
 "translations, as I cannot verify it in many cases."
 msgstr ""
-"Dies ist in meinem Land gesetzlich vorgeschrieben,"
-" Übersetzer sollten hier ihre Informationen hinzufügen. Ich kann keine"
-" Verantwortung für den Inhalt der Übersetzungen übernehmen, da ich"
-" ihn in vielen Fällen nicht überprüfen kann."
+"Dies ist in meinem Land gesetzlich vorgeschrieben, Übersetzer sollten "
+"hier ihre Informationen hinzufügen. Ich kann keine Verantwortung für den "
+"Inhalt der Übersetzungen übernehmen, da ich ihn in vielen Fällen nicht "
+"überprüfen kann."
 
 #: ../../README.rst:149
 msgid "Page ``pages/Presentations.rst``"
@@ -232,10 +253,10 @@ msgid ""
 "there. But if you are aware of material in your language, please go ahead"
 " and add it."
 msgstr ""
-"Diesem sollte wahrscheinlich mehr Aufmerksamkeit geschenkt werden,"
-" was den Inhalt betrifft. Er befindet sich im Aufbau. Ich möchte"
-" den Blog überarbeiten und alle Informationen von dort verlinken."
-" Aber wenn Sie Material in Ihrer Sprache kennen, fügen Sie es bitte hinzu."
+"Diesem sollte wahrscheinlich mehr Aufmerksamkeit geschenkt werden, was "
+"den Inhalt betrifft. Er befindet sich im Aufbau. Ich möchte den Blog "
+"überarbeiten und alle Informationen von dort verlinken. Aber wenn Sie "
+"Material in Ihrer Sprache kennen, fügen Sie es bitte hinzu."
 
 #: ../../README.rst:157
 msgid "Page ``Streaming.rst``"
@@ -248,11 +269,11 @@ msgid ""
 "English content, I think it ought to be translated on a basic level at "
 "the beginning of the page, and then have untranslated content?"
 msgstr ""
-"Da es sich um ein englisches Angebot handelt, bin ich mir nicht sicher,"
-" ob es Sinn macht, ich werde es in naher Zukunft auch etwas aktualisieren,"
-" aber um klarzustellen, dass es ein englischer Inhalt sein wird, denke ich,"
-" dass es auf einer grundlegenden Ebene am Anfang der Seite übersetzt werden sollte,"
-" der Rest nicht?"
+"Da es sich um ein englisches Angebot handelt, bin ich mir nicht sicher, "
+"ob es Sinn macht, ich werde es in naher Zukunft auch etwas aktualisieren,"
+" aber um klarzustellen, dass es ein englischer Inhalt sein wird, denke "
+"ich, dass es auf einer grundlegenden Ebene am Anfang der Seite übersetzt "
+"werden sollte, der Rest nicht?"
 
 #: ../../README.rst:165
 msgid "Page ``doc/api-doc.rst``"
@@ -263,8 +284,9 @@ msgid ""
 "Translation makes no sense and cannot be done currently anyway. The API "
 "doc is going to be generated with Spinx, Doxygen docs are without love."
 msgstr ""
-"Eine Übersetzung macht keinen Sinn und kann derzeit ohnehin nicht durchgeführt werden."
-" Die API-Dokumentation wird mit Sphinx erstellt, Doxygen-Dokumente sind lieblos."
+"Eine Übersetzung macht keinen Sinn und kann derzeit ohnehin nicht "
+"durchgeführt werden. Die API-Dokumentation wird mit Sphinx erstellt, "
+"Doxygen-Dokumente sind lieblos."
 
 #: ../../README.rst:171
 msgid "Page ``doc/commercial.rst`` and folder ``commercial``"
@@ -278,12 +300,12 @@ msgid ""
 "China, but maybe other things can work. And Russia e.g. has no Paypal "
 "(which I mean to add as an alternative still)."
 msgstr ""
-"Die Übersetzung ist sehr willkommen. Mit der Zeit werden weitere Inhalte"
-" hinzugefügt. Was die Zahlungsmöglichkeiten angeht, so prüfen Sie bitte,"
-" ob sie in Ihrem Land funktionieren und wenn nicht, helfen Sie mir,"
-" Alternativen zu finden. Ich wurde z.B. für AliPay in China abgelehnt,"
-" aber vielleicht funktionieren andere Dinge. Und Russland hat z.B."
-" kein Paypal (was ich als Alternative noch hinzufügen möchte)."
+"Die Übersetzung ist sehr willkommen. Mit der Zeit werden weitere Inhalte "
+"hinzugefügt. Was die Zahlungsmöglichkeiten angeht, so prüfen Sie bitte, "
+"ob sie in Ihrem Land funktionieren und wenn nicht, helfen Sie mir, "
+"Alternativen zu finden. Ich wurde z.B. für AliPay in China abgelehnt, "
+"aber vielleicht funktionieren andere Dinge. Und Russland hat z.B. kein "
+"Paypal (was ich als Alternative noch hinzufügen möchte)."
 
 #: ../../README.rst:180
 msgid "Page ``doc/factory.rst``"
@@ -303,10 +325,10 @@ msgid ""
 "play around with translation mechanics. We will want to e.g. have an "
 "intelligent language switcher at some point, and could try it out there."
 msgstr ""
-"Das ist nur ein Spielplatz für mich, nicht übersetzen, es sei denn,"
-" wir wollen mit Übersetzungsmechanismen herumspielen. Wir werden z.B."
-" irgendwann einen intelligenten Sprachwechsler haben wollen und"
-" könnten ihn dort ausprobieren."
+"Das ist nur ein Spielplatz für mich, nicht übersetzen, es sei denn, wir "
+"wollen mit Übersetzungsmechanismen herumspielen. Wir werden z.B. "
+"irgendwann einen intelligenten Sprachwechsler haben wollen und könnten "
+"ihn dort ausprobieren."
 
 #: ../../README.rst:192
 msgid "Page ``doc/Changelog.rst``"
@@ -326,9 +348,10 @@ msgid ""
 "Tables are generated into the document, this is probably a harder case "
 "technically, so hold off until this is sorted out."
 msgstr ""
-"Sehr willkommen, aber Vorsicht, ``download.rst.j2`` ist die eigentliche Quelle."
-" Tabellen werden in das Dokument generiert, dies ist wahrscheinlich"
-" ein technisch schwierigerer Fall, also warten Sie, bis dies geklärt ist."
+"Sehr willkommen, aber Vorsicht, ``download.rst.j2`` ist die eigentliche "
+"Quelle. Tabellen werden in das Dokument generiert, dies ist "
+"wahrscheinlich ein technisch schwierigerer Fall, also warten Sie, bis "
+"dies geklärt ist."
 
 #: ../../README.rst:204
 msgid "Page ``developer-manual.rst``"
@@ -339,8 +362,8 @@ msgid ""
 "Makes no sense to translate. But potentially there is content that "
 "belongs to user manual in there or should be split off."
 msgstr ""
-"Es macht keinen Sinn, zu übersetzen. Möglicherweise gibt es aber"
-" Inhalte, die in das Benutzerhandbuch gehören oder abgetrennt werden sollten."
+"Es macht keinen Sinn, zu übersetzen. Möglicherweise gibt es aber Inhalte,"
+" die in das Benutzerhandbuch gehören oder abgetrennt werden sollten."
 
 #: ../../README.rst:210
 msgid "Page ``roadmap.rst``"
@@ -348,7 +371,9 @@ msgstr "Seite ``roadmap.rst``"
 
 #: ../../README.rst:212
 msgid "Much like changelog, not as much work, but also not as important."
-msgstr "Ähnlich wie der Changelog, nicht so viel Arbeit, aber auch nicht so wichtig."
+msgstr ""
+"Ähnlich wie der Changelog, nicht so viel Arbeit, aber auch nicht so "
+"wichtig."
 
 #: ../../README.rst:215
 msgid "Page ``doc/user-manual.rst``"
@@ -361,10 +386,10 @@ msgid ""
 " applies here very much. I think Tutorial parts might be factored out to "
 "separate documents."
 msgstr ""
-"Das ist meiner Meinung nach das Wichtigste. Der Bereich Optimierung"
-" braucht ein ernsthaftes Update von meiner Seite, vielleicht ignoriere ich das,"
-" bis ich dazu komme. Review trifft hier sehr gut zu. Ich denke,"
-" dass die Tutorial-Teile in separate Dokumente ausgelagert werden könnten."
+"Das ist meiner Meinung nach das Wichtigste. Der Bereich Optimierung "
+"braucht ein ernsthaftes Update von meiner Seite, vielleicht ignoriere ich"
+" das, bis ich dazu komme. Review trifft hier sehr gut zu. Ich denke, dass"
+" die Tutorial-Teile in separate Dokumente ausgelagert werden könnten."
 
 #: ../../README.rst:224
 msgid "How to translate"
@@ -378,12 +403,11 @@ msgid ""
 "can write the translation. If you then want to transfer your changes via "
 "PR, please commit **only** the files you have translated."
 msgstr ""
-"Unter locales in dem Ordner mit dem Sprachkürzel sind viele .po Dateien."
-" In der .po Datei kannst du ``msgid`` und darunter ``msgstr`` sehen."
-" In ``msgid`` befindet sich das englische Original,"
-" in ``msgstr`` kannst du die Übersetzung reinschreiben."
-" Bitte committe **nur** die Dateien, die du übersetzt hast,"
-" wenn du deine Änderungen per PR hochlädst."
+"Unter locales in dem Ordner mit dem Sprachkürzel sind viele .po Dateien. "
+"In der .po Datei kannst du ``msgid`` und darunter ``msgstr`` sehen. In "
+"``msgid`` befindet sich das englische Original, in ``msgstr`` kannst du "
+"die Übersetzung reinschreiben. Bitte committe **nur** die Dateien, die du"
+" übersetzt hast, wenn du deine Änderungen per PR hochlädst."
 
 #: ../../README.rst:242
 msgid "Image Optimization"
